# applications

./: Dockerfile  README.md  official_apps.json  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/azuraforge_applications/: official_apps.json
src/azuraforge_applications.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/azuraforge_apps_catalog/: official_apps.json
